Adicionando paginas html e links a partir da pagina principal

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
               </div>
               <div class="col-md-2">
                   <div class="more-details">
-                      <span>Saiba mais...</span>
+                      <span><a href=" {{ item.pageLink }}">Saiba mais...</a></span>
                   </div>
               </div>
           </div>
