--- a/index.html
+++ b/index.html
@@ -47,80 +47,48 @@
         }
     </style>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/controller/main-controller.js"></script>
+    <script src="js/controller/fusivel-cartucho-controller.js"></script>
 </head>
 
-<body id="page-top" ng-app="eletromec" ng-controller="initialPageController">
+<body id="page-top" ng-app="eletromec">
 
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-xs-12">
-                    <img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-xs-8">
-                    <p>
-                        Fusíveis e Seccionadoras, Minidisjuntores, </br>
-                        Interruptores diferenciais residuais, </br>
-                        Protetores contra Surto, </br>
-                        Disjuntores em caixa moldada.
-                    </p>
-                </div>
-                <div class="col-xs-4">
-                    <div class="banner-buttons">
-                        <ul>
-                            <li class="active" data-banner="1"></li>
-                            <li data-banner="2"></li>
-                            <li data-banner="3"></li>
-                            <li data-banner="4"></li>
-                            <li data-banner="5"></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <section>
-        <div class="container bg-white">
+  <!-- CONTEÚDO COMUM A TODAS AS PÁGINAS-->
+  <header>
+      <div class="container">
           <div class="row">
               <div class="col-xs-12">
-                  <p>
-                      Linha de produtos Eletromec. A solução perfeita e conﬁável para todas  as necessidades. </br>
-                      Conﬁabilidade, facilidade de instalação, design moderno e alto nível de qualidade. </br>
-                      As soluções inovadoras das linhas de produtos Eletromec são uma excelente alternativa </br>
-                      em custo beneﬁcio para os mais diversiﬁcados projetos, residencial, comercial e </br>
-                      industrial, garantindo máxima eﬁciência e proteção absoluta.
-                  </p>
+                  <img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
               </div>
           </div>
-        </div>
-    </section>
-
-    <section ng-repeat="item in itens" style="margin-bottom: 50px;">
-        <div class="container bg-gray">
           <div class="row">
-              <div class="col-md-4">
-                  <img src="{{ item.imagePath }}" alt="" />
+              <div class="col-xs-8">
+                  <p>
+                      Fusíveis e Seccionadoras, Minidisjuntores, </br>
+                      Interruptores diferenciais residuais, </br>
+                      Protetores contra Surto, </br>
+                      Disjuntores em caixa moldada.
+                  </p>
               </div>
-              <div class="col-md-6">
-                  <h1>{{ item.title }}</h1>
-                  <h3>{{ item.subTitle }}</h3>
-                  <p>{{ item.description }}</p>
-                  <ul>
-                      <li ng-repeat="listItem in item.descriptionList">{{ listItem }}</li>
-                  </ul>
-              </div>
-              <div class="col-md-2">
-                  <div class="more-details">
-                      <span><a href=" {{ item.pageLink }}">Saiba mais...</a></span>
+              <div class="col-xs-4">
+                  <div class="banner-buttons">
+                      <ul>
+                          <li class="active" data-banner="1"></li>
+                          <li data-banner="2"></li>
+                          <li data-banner="3"></li>
+                          <li data-banner="4"></li>
+                          <li data-banner="5"></li>
+                      </ul>
                   </div>
               </div>
           </div>
-        </div>
-    </section>
+      </div>
+  </header>
+
+    <ng-view></ng-view>
+
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
