--- a/index.html
+++ b/index.html
@@ -3,106 +3,110 @@
 
 <head>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="">
+<meta name="author" content="">
 
-    <title>Eaton - Eletromec</title>
+<title>Eaton - Eletromec</title>
 
-    <!-- Bootstrap Core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<!-- Bootstrap Core CSS -->
+<link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom Fonts -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<!-- Custom Fonts -->
+<link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+<link
+  href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<link
+  href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic'
+  rel='stylesheet' type='text/css'>
 
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
+<!-- Plugin CSS -->
+<link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
-    <!-- Theme CSS -->
-    <link href="css/creative.min.css" rel="stylesheet">
+<!-- Theme CSS -->
+<link href="css/creative.min.css" rel="stylesheet">
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 
-    <style type="text/css">
-        @font-face {
-            font-family: "EatonBold";
-            src: url('font/EatonBold.otf') format("truetype");
-        }
-        @font-face {
-            font-family: "EatonMed";
-            src: url('font/EatonMed.otf') format("truetype");
-        }
-        @font-face {
-            font-family: "EatonReg";
-            src: url('font/EatonReg.otf') format("truetype");
-        }
-    </style>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/controller/main-controller.js"></script>
-    <script src="js/controller/fusivel-cartucho-controller.js"></script>
+<style type="text/css">
+@font-face {
+  font-family: "EatonBold";
+  src: url('font/EatonBold.otf') format("truetype");
+}
+
+@font-face {
+  font-family: "EatonMed";
+  src: url('font/EatonMed.otf') format("truetype");
+}
+
+@font-face {
+  font-family: "EatonReg";
+  src: url('font/EatonReg.otf') format("truetype");
+}
+</style>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+<script src="js/app.js"></script>
+<script src="js/controller/main-controller.js"></script>
 </head>
 
 <body id="page-top" ng-app="eletromec">
 
   <!-- CONTEÚDO COMUM A TODAS AS PÁGINAS-->
   <header>
-      <div class="container">
-          <div class="row">
-              <div class="col-xs-12">
-                  <img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
-              </div>
-          </div>
-          <div class="row">
-              <div class="col-xs-8">
-                  <p>
-                      Fusíveis e Seccionadoras, Minidisjuntores, </br>
-                      Interruptores diferenciais residuais, </br>
-                      Protetores contra Surto, </br>
-                      Disjuntores em caixa moldada.
-                  </p>
-              </div>
-              <div class="col-xs-4">
-                  <div class="banner-buttons">
-                      <ul>
-                          <li class="active" data-banner="1"></li>
-                          <li data-banner="2"></li>
-                          <li data-banner="3"></li>
-                          <li data-banner="4"></li>
-                          <li data-banner="5"></li>
-                      </ul>
-                  </div>
-              </div>
-          </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-xs-12">
+          <img src="img/banners/1.jpg" alt="Banner" width="100%" id="banner" />
+        </div>
       </div>
+      <div class="row">
+        <div class="col-xs-8">
+          <p>
+            Fusíveis e Seccionadoras, Minidisjuntores, </br> Interruptores
+            diferenciais residuais, </br> Protetores contra Surto, </br> Disjuntores em
+            caixa moldada.
+          </p>
+        </div>
+        <div class="col-xs-4">
+          <div class="banner-buttons">
+            <ul>
+              <li class="active" data-banner="1"></li>
+              <li data-banner="2"></li>
+              <li data-banner="3"></li>
+              <li data-banner="4"></li>
+              <li data-banner="5"></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </header>
 
-    <ng-view></ng-view>
+  <ng-view></ng-view>
 
 
-    <!-- jQuery -->
-    <script src="vendor/jquery/jquery.min.js"></script>
+  <!-- jQuery -->
+  <script src="vendor/jquery/jquery.min.js"></script>
 
-    <!-- Bootstrap Core JavaScript -->
-    <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+  <!-- Bootstrap Core JavaScript -->
+  <script src="vendor/bootstrap/js/bootstrap.min.js"></script>
 
-    <!-- Plugin JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!-- Plugin JavaScript -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+  <script src="vendor/scrollreveal/scrollreveal.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+  <!-- Theme JavaScript -->
+  <script src="js/creative.min.js"></script>
 
 </body>
 
