Páginas Fusível Cartucho e ELDR (parcial)

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 <!-- Theme CSS -->
 <link href="css/creative.min.css" rel="stylesheet">
 
+<link href="css/index.css" rel="stylesheet">
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -51,6 +53,7 @@
   src: url('font/EatonReg.otf') format("truetype");
 }
 </style>
+
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
 <script src="js/app.js"></script>
@@ -60,7 +63,7 @@
 <body id="page-top" ng-app="eletromec">
 
   <!-- CONTEÚDO COMUM A TODAS AS PÁGINAS-->
-  <header>
+<!--   <header>
     <div class="container">
       <div class="row">
         <div class="col-xs-12">
@@ -88,7 +91,7 @@
         </div>
       </div>
     </div>
-  </header>
+  </header> -->
 
   <ng-view></ng-view>
 
