--- a/index.html
+++ b/index.html
@@ -49,7 +49,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
     <script src="js/app.js"></script>
     <script src="js/controller/main-controller.js"></script>
-    <script src="js/controller/fusivel-cartucho-controller.js"></script>
 </head>
 
 <body id="page-top" ng-app="eletromec">
@@ -86,7 +85,10 @@
       	</div>
   	</header>
 
+    <!-- Conteúdo dinâmico -->
     <ng-view></ng-view>
+
+    <div ng-include="'/views/footer.html'"></div>
 
     <!-- jQuery -->
     <script src="vendor/jquery/jquery.min.js"></script>
