Inclusão do header.html no template

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 <body id="page-top" ng-app="eletromec">
 
-  	<!-- CONTEÚDO COMUM A TODAS AS PÁGINAS-->
+  	<div ng-include="'/views/header.html'"></div>
 
     <!-- Conteúdo dinâmico -->
     <ng-view></ng-view>
